--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#home" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
+                        <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Service</a>
+                        <a href="#service" class="nav-link">Service</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Contact</a>
+                        <a href="#contact" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="navbar-nav">
@@ -47,19 +47,19 @@
     </nav>
 
     <!--hero section-->
-    <div class="home-page-wrapper">
+    <div class="home-page-wrapper" id="home">
         <div class="bg-container bg-cover min-vh-100 d-flex align-items-center">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <h6 class="text-uppercase text-white ls">The gentlemen's lounge</h6>
-                        <h1 class="display-2 text-white fw-bold">The Kingsman <br> Barbershop</h1>
+                        <h1 class="display-2 text-custom fw-bold">The Kingsman <br> Barbershop</h1>
                         <p class="lead text-white">Because we believe that manners define a man,
                             and because we believe that the most important thing a gentleman has to present,
                             besides his elegance, is indeed his hairstyle
                             
                             </p>
-                        <a class="btn btn-custom text-white" href="#">Book Now</a>
+                        <a class="btn btn-custom text-white" href="#book">Book Now</a>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
     </div>
 
     <!--about section-->
-    <div class="about-page-wrapper">
+    <div class="about-page-wrapper" id="about">
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-lg-6">
@@ -89,7 +89,7 @@
     </div>
 
     <!--service section-->
-    <div class="service-page-wrapper" id="services">
+    <div class="service-page-wrapper" id="service">
         <div class="container">
             <h3 class="fw-bold text-center mt-3 text-custom">What we do</h3>
             <div class="row my-5">
@@ -156,8 +156,8 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-lg-6">
-                    <p class="fw-bold fs-5 mb-1">Due to Covid -19,we are <br> providing home service <br> for your safety</p>
-                    <p class="fw-bold ">Call to make an Appointment from mobile</p>
+                    <p class="fw-bold mb-3 display-6">Due to Covid -19,we are <br> providing home service <br> for your safety</p>
+                    <p class="fw-bold display-6 text-black">Call to make an Appointment from mobile</p>
                     <p class="display-4 text-custom fw-bold">+(44) 0000-0000</p>
                 </div>
                 <div class="col-10 col-sm-8 col-lg-6">
@@ -169,7 +169,7 @@
     </div>
 
     <!--testimonials section-->
-    <div class="testimonials-section bg-cover">
+    <div class="testimonials-section bg-cover" id="touch">
         <div class="container">
             <h3 class="fw-bold text-center mt-3 display-5 text-custom">Discover what they say about us</h3>
             <div class="row my-5">
@@ -244,13 +244,13 @@
                 </div>
             </div>
             <div class="sub p-5">
-                <button class="btn btn-primary"> Subscribe</button>
+                <button class="btn btn-custom"> Subscribe</button>
             </div>
         </div>
     </div>
 
     <!--appointment form-->
-    <div class="appointment-section py-5 h-100vh bg-cover">
+    <div class="appointment-section py-5 h-100vh bg-cover" id="book">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
@@ -361,7 +361,7 @@
           </div>
     </div>
     <!--maps section-->
-    <div class="maps-contact bg-cover">
+    <div class="maps-contact bg-cover" id="contact">
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-10 col-sm-8 col-lg-6">
@@ -402,23 +402,9 @@
         </div>
     </footer>
     
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!--bootstrap javascript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
     </script>
 </body>
-
 </html>
